# Handwritten-digit-recognition

./: Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: actions.yaml
src/: app.py  array_numbers.py  label_scores.py  operations.py
src/array_digits/: __init__.py  eight.py  four.py  nine.py  seven.py  three.py
src/array_numbers/: __init__.py  eight.py  five.py  four.py  one.py  six.py  three.py  two.py  zero.py
tests/: test_operations.py
