[tool.poetry]
name = "handwritten-number-detector"
version = "0.1.0"
description = ""
authors = ["Erick Calderin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
numpy = "^1.26.4"
streamlit-drawable-canvas = "^0.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
